--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -58,8 +58,9 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>64&deg;</td>
-                            <img src="images/sun.png" alt= "sun" class="weather-image">
+                            <td>64&deg;
+                                <img src="images/sun.png" alt= "sun" class="weather-image">
+                            </td>
                             <td>60&deg;</td>
                             <td>58&deg;</td>
                             <td>61&deg;</td>
