--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -58,9 +58,11 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td>64&deg;
-                                <img src="images/sun.png" alt= "sun" class="weather-image">
-                            </td>
+                            <td align="center" valign="center">
+                                <img src="images/sun.png" alt="sun" />
+                                <br />
+                                64°
+                                </td>
                             <td>60&deg;</td>
                             <td>58&deg;</td>
                             <td>61&deg;</td>
