--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -62,11 +62,27 @@
                                 <img src="images/sun.png" alt="sun" />
                                 <br />
                                 64°
-                                </td>
-                            <td>60&deg;</td>
-                            <td>58&deg;</td>
-                            <td>61&deg;</td>
-                            <td>59&deg;</td>
+                            </td>
+                            <td align="center" valign="center">
+                                <img src="images/sun.png" alt="sun" />
+                                <br />
+                                60°
+                            </td>
+                            <td align="center" valign="center">
+                                <img src="images/sun.png" alt="sun" />
+                                <br />
+                                58°
+                            </td>
+                            <td align="center" valign="center">
+                                <img src="images/sun.png" alt="sun" />
+                                <br />
+                                62°
+                            </td>
+                            <td align="center" valign="center">
+                                <img src="images/sun.png" alt="sun" />
+                                <br />
+                                50°
+                            </td>
                         </tr>
                     </tbody>
                 </table>
