--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -49,7 +49,7 @@
             <br>
             <div class="forecast-div"></div>
             <div class="forecast">
-                <table class="forecast-table">
+                <table>
                     <thead>
                     <tr>Monday  </tr>
                     <tr>Tuesday  </tr>
