--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -51,11 +51,13 @@
             <div class="forecast">
                 <table>
                     <thead>
-                    <tr>Monday  </tr>
-                    <tr>Tuesday  </tr>
-                    <tr>Wednesday  </tr>
-                    <tr>Thursday  </tr>
-                    <tr>Friday </tr>
+                    <tr>
+                        <td>Monday </td>
+                        <td>Tuesday </td>
+                        <td>Wednesday </td>
+                        <td>Thursday </td>
+                        <td>Friday </td>
+                    </tr>
                     </thead>
                     <tbody>
                         <tr>
