--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -49,7 +49,7 @@
             <br>
             <div class="forecast-div"></div>
             <div class="forecast">
-                <table>
+                <table class="weekdays">
                     <thead>
                     <tr>
                         <td>Monday </td>
@@ -88,7 +88,7 @@
                             </td>
                         </tr>
                     </tbody>
-                </table>
+                </table cl>
             </div>
             <div class="content">Article</div>
             <div class="content">Contact Information</div>
