--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -51,7 +51,7 @@
             <div class="forecast">
                 <table class="weekdays">
                     <thead>
-                    <tr>
+                    <tr align="center">
                         <td>Monday </td>
                         <td>Tuesday </td>
                         <td>Wednesday </td>
