--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -51,6 +51,7 @@
             <div class="forecast">
                 <table class="weekdays">
                     <thead>
+                        <h3>5 Day Weather Forecast</h3>
                     <tr align="center">
                         <td>Monday </td>
                         <td>Tuesday </td>
