--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -91,7 +91,10 @@
                     </tbody>
                 </table cl>
             </div>
-            <div class="content">Article</div>
+            <div class="article.div"></div>
+            <div class="article">
+                
+            </div>
             <div class="content">Contact Information</div>
         </main>
         <footer>
