--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -89,8 +89,9 @@
                             </td>
                         </tr>
                     </tbody>
-                </table cl>
+                </table>
             </div>
+            <br>
             <div class="article.div"></div>
             <div class="article">
                 
