--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -103,6 +103,7 @@
             <div class="content">Contact Information</div>
         </main>
         <footer>
+            <img src="images/prestonmap.png" alt="map" class="prestonmap">
             <div class="lastInfo"></div>
                 &#169; Right On Weather | Attributions | <br class='responsive'> Laura Sommer
                 <div id="updated">
