--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -104,6 +104,11 @@
         </main>
         <footer>
             <img src="images/prestonmap.png" alt="map" class="prestonmap">
+            <div class="contactinfo">
+            <h3>Contact Information</h3>
+            Phone: 888-888-8888
+            Email: rightonweather@gmail.com
+            </div>
             <br>
             <div class="lastInfo"></div>
                 &#169; Right On Weather | Attributions | <br class='responsive'> Laura Sommer
