--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -106,8 +106,8 @@
             <img src="images/prestonmap.png" alt="map" class="prestonmap">
             <div class="contactinfo">
             <h3>Contact Information</h3>
-            <p>Phone: 888-888-8888</p>
-            <p>Email: rightonweather@gmail.com</p>
+            <p>&#9742;Phone: 888-888-8888</p>
+            <p>&#9993;Email: rightonweather@gmail.com</p>
             </div>
             <br>
             <div class="lastInfo"></div>
