--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -104,12 +104,10 @@
             <div class="contactmap">
             <img src="images/prestonmap.png" alt="map" class="prestonmap">
             <div class="contactinfo">
-            <h3>Contact Information</h3>
+            <h3>Contact Information:</h3>
             <p>&#9742;: 888-888-8888</p>
             <p>&#9993;: rightonweather@gmail.com</p>
             </div>
-            <br>
-            <br>
             <br>
             <div class="social">
                 <a href="https://www.facebook.com/" target="_blank"><img src="https://cdn.glitch.com/8f8d0525-162d-42b7-945e-da0caec38f0f%2Ffacebook%20logo.png?v=1580410627161" alt="facebook logo"></a>
