--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -110,6 +110,7 @@
             </div>
             <br>
             <div class="social">
+                <h3>Social:</h3>
                 <a href="https://www.facebook.com/" target="_blank"><img src="https://cdn.glitch.com/8f8d0525-162d-42b7-945e-da0caec38f0f%2Ffacebook%20logo.png?v=1580410627161" alt="facebook logo"></a>
                <a href="https://www.youtube.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.12%20AM.png?v=1580233068298" alt="Youtube icon"></a>
                <a href="https://www.twitter.com/" target="_blank"><img src="https://cdn.glitch.com/486b6a3e-32c5-4c38-868b-097eac15d4dd%2FScreen%20Shot%202020-01-28%20at%2010.34.21%20AM.png?v=1580233060662" alt="Twitter icon"></a>
