--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -13,6 +13,9 @@
     </head>
     <body>
         <header>
+            <div id="big-banner">
+                Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
+                </div>
             <picture>
             <img src="images/weatherlogoresize.png" alt="weather logo">
             </picture>
