--- a/lesson 1/index.html
+++ b/lesson 1/index.html
@@ -37,6 +37,8 @@
                 <script src="file.js" type="text/javascript"></script>
             </span>
         </footer>
+        <script>
+        </script>
     </main>
 </body>
 
