--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -128,5 +128,6 @@
         </footer>
         <script src="js/file.js"></script>
         <script src="js/getcurrentdate.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     </body>
 </html>
