--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -129,5 +129,12 @@
         <script src="js/file.js"></script>
         <script src="js/getcurrentdate.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+        <script>WebFont.load({
+            google: {
+              families: [
+                "PT Sans, Sansita Swashed "
+              ]
+            }
+          });</script>
     </body>
 </html>
