--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -131,10 +131,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
         <script>WebFont.load({
             google: {
-              families: [
-                "PT Sans, Sansita Swashed "
-              ]
-            }
-          });</script>
+              families: ["PT Sans, Sansita Swashed "]}});</script>
     </body>
 </html>
