--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -42,11 +42,11 @@
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
-                <p>Currently:</p>
-                <p>High:</p>
-                <p>Wind Chill:</p>
-                <p>Humidity:</p>
-                <p>Wind Speed:</p>
+                <p>Currently: 63°F</p>
+                <p>High: 64°F</p>
+                <p>Wind Chill: 59°F </p>
+                <p>Humidity: 50%</p>
+                <p>Wind Speed: 9 MPH</p>
             </section>
             </div>
             <br>
