--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -52,7 +52,7 @@
             <br>
             <div class="forecast-div"></div>
             <div class="forecast">
-                <h3 style="text-align:center;">5 Day Weather Forecast</h3>
+                <h3>5 Day Weather Forecast</h3>
                 <table class="weekdays">
                     <thead>
                     <tr align="center">
