--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -55,7 +55,7 @@
                 <h3>5 Day Weather Forecast</h3>
                 <table class="weekdays">
                     <thead>
-                    <tr align="center">
+                    <tr align="center" valign="center">
                         <td>Monday </td>
                         <td>Tuesday </td>
                         <td>Wednesday </td>
