--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -36,7 +36,7 @@
                 </ul>
             </nav>
         <main>
-            <h2>Preston, Idaho</h2>
+            <h2 class="town">Preston, Idaho</h2>
             <div class="hero-ph"></div>
             <div class="herodiv">
                 <img src="images/hero.jpg" alt="banner img" class="banner-image">
