--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -115,8 +115,7 @@
              </div>
         </main>
         <footer>
-            <div class="lastInfo"></div>
-                &#169; Right On Weather | Attributions | <br class='responsive'> Laura Sommer
+                &#169; Right On Weather | Attributions | Laura Sommer
                 <div id="updated">
                 </div>
         </footer>
