--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -16,7 +16,6 @@
             <div id="big-banner">
                 Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
                 </div>
-            <picture>
             <img src="images/weatherlogoresize.png" alt="weather logo">
             </picture>
             <section class="heading">
@@ -38,7 +37,9 @@
         <main>
             <h2 class="town">Preston, Idaho</h2>
             <div class="herodiv">
-                <img src="images/hero.jpg" alt="banner img" class="banner-image">
+                <picture class="banner-img">
+                    <source media="(max-width: 600px);" srcset="images/small.jpg"
+                </picture>
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
                 <p>Currently: 63°F</p>
