--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -38,7 +38,9 @@
             <h2 class="town">Preston, Idaho</h2>
             <div class="herodiv">
                 <picture class="banner-img">
-                    <source media="(max-width: 600px);" srcset="images/small.jpg"
+                    <source media="(max-width: 200px)" srcset="images/small.jpg">
+                    <source media="max-width: 600px)" srcset="images/medium.jpg">
+                        <img src="images/large.jpg" alt="herobannerimg">
                 </picture>
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
