--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -39,7 +39,7 @@
             <div class="herodiv">
                 <picture class="banner-img">
                     <source media="(max-width: 200px)" srcset="images/small.jpg">
-                    <source media="max-width: 600px)" srcset="images/medium.jpg">
+                    <source media="(max-width: 600px)" srcset="images/medium.jpg">
                         <img src="images/large.jpg" alt="herobannerimg">
                 </picture>
             <section class="weathersummary">
