--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -16,6 +16,7 @@
             <div id="big-banner">
                 Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
                 </div>
+            <picture>
             <img src="images/weatherlogoresize.png" alt="weather logo">
             </picture>
             <section class="heading">
