--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -122,7 +122,17 @@
                 <div id="updated">
                 </div>
         </footer>
+        <body>
+            <input type="text" id="temp"> Temperature </input>
+            <input type="text" id="windSpeed"> Wind Speed </input>
+            </br>
+            </br>
+            <button type="button" onClick="doInputOutput();">Wind Chill</button>
+            <!--<button type="button" onclick="fifteen();">Click</button>-->
+            <div id="output"></div>
+            </body>
         <script src="js/file.js"></script>
         <script src="js/getcurrentdate.js"></script>
+        <script src="js/windchill.js"></script>
     </body>
 </html>
