--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -45,11 +45,17 @@
                 </picture>
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
-                <p>Currently: 63°F</p>
-                <p>High: 64°F</p>
-                <p>Wind Chill: 59°F </p>
-                <p>Humidity: 50%</p>
-                <p>Wind Speed: 9 MPH</p>
+                <span>Currently:</span>
+                <span class="value">Raining</span>
+                <span>High:</span>
+                <span class="value"></span><span class="temperature">64°F</span>
+                <span>Wind Chill:</span>
+                <span class="value"></span><span class=".chill">
+               </span>&deg;F</span>
+                <span>Humidity:</span>
+                <span class="value">50%</span>
+                <span>Wind Speed:</span>
+                <span class="value"><span class=".windspeed"> 9 MPH</span>
             </section>
             </div>
             <div class="forecast">
