--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -51,7 +51,7 @@
                 <span class="value"></span><span class="temperature">64°F</span>
                 <span>Wind Chill:</span>
                 <span class="value"></span><span class=".chill">
-               </span>&deg;F</span>
+               N/A</span>&deg;F</span>
                 <span>Humidity:</span>
                 <span class="value">50%</span>
                 <span>Wind Speed:</span>
