--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -47,15 +47,16 @@
                 <h3>Weather Summary</h3>
                 <span>Currently:</span>
                 <span class="value">Raining</span>
-                <span>High:</span>
-                <span class="value"></span><span class="temperature">64°F</span>
-                <span>Wind Chill:</span>
-                <span class="value"></span><span class=".chill">
-               N/A</span>&deg;F</span>
+                <span>High</span>
+                <span class="value">
+                <span class="temp">54</span> &#176;F</span>
+                <span>Wind Chill: </span>
+                <span class="value" id=".chill">N/A</span>
                 <span>Humidity:</span>
                 <span class="value">50%</span>
-                <span>Wind Speed:</span>
-                <span class="value"><span class=".windspeed"> 9 MPH</span>
+                <span>Wind Speed: </span>
+                <span class="value">
+                    <span class=".windspeed">12</span> mph</span>
             </section>
             </div>
             <div class="forecast">
