--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Lazy Load Code"/>
     </head>
     <body>
-        <main>
+        <main class="main">
             <h1>Gallery</h1>
             <picture>
                 <img data-src="lazyload.images/lazyload1.jpeg" alt="camera">
