--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <main class="main">
-            <h1>Gallery</h1>
+            <h1>Progressive Loading</h1>
             <picture>
                 <img data-src="lazyload.images/lazyload1.jpeg" alt="camera">
             </picture>
