--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -11,22 +11,22 @@
         <main class="main">
             <h1>Progressive Loading</h1>
             <picture>
-                <img data-src="lazyload.images/lazyload1.jpeg" alt="camera">
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload1.jpeg" alt="camera">
             </picture>
             <picture>
-                <img data-src="lazyload.images/lazyload2.jpeg" alt="mountains">
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload2.jpeg" alt="mountains">
             </picture>
             <picture>
-                <img data-src="lazyload.images/lazyload3.jpg" alt="man on rock">
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload3.jpg" alt="man on rock">
             </picture>
             <picture>
-                <img data-src="lazyload.images/lazyload4.jpeg" alt="sailboat">
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload4.jpeg" alt="sailboat">
             </picture>
             <picture>
-                <img data-src="lazyload.images/lazyload5.jpeg" alt="river and mountains">
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload5.jpeg" alt="river and mountains">
             </picture>
             <picture>
-                <img data-src="lazyload.images/lazyload6.jpg" alt="paper rolls">
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload6.jpg" alt="paper rolls">
             </picture>
         </main>
         <script src="lazyload.js"></script>
