--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="small.css">
-        <link rel="stylesheet" href="medium.css">
+        <link rel="stylesheet" href="css/small.css">
+        <link rel="stylesheet" href="css/medium.css">
         <title> WDD 230-06 Assignment Portal</title>
         <meta name="description" content="Assignment portal for WDD 230-06"/>
     </head>
