--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <div class="studentPortal">
-                <img src="profile.pic.jpg" alt="student_pic" class="studentPic">
+                <img src="images/profile.pic.jpg" alt="student_pic" class="studentPic">
                 <h1>Laura Sommer</h1>
                 </div>
         </header>
