--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link rel="stylesheet" href="lazyload.css">
+        <link rel="stylesheet" href="css/lazyload.css">
         <title>Lazy Load Code</title>
         <meta name="description" content="Lazy Load Code"/>
     </head>
@@ -29,6 +29,6 @@
                 <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload6.jpg" alt="paper rolls">
             </picture>
         </main>
-        <script src="lazyload.js"></script>
+        <script src="js/lazyload.js"></script>
     </body>
 </html>
