--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Preston Town Page</title>
+        <title>Gallery</title>
         <meta name="description" content="My Weather Site">
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="css/normalize.css">
