--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -17,7 +17,7 @@
                 Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
                 </div>
             <picture>
-            <img src="images/weatherlogoresize.png" alt="weather logo">
+            <img src="gallery.images/" alt="weather logo">
             </picture>
             <section class="heading">
             <h1>Right On Weather</h1>
