--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -40,7 +40,7 @@
         </main>
         <footer>
             <div class="contactmap">
-                <img src="images/prestonmap.png" alt="map" class="prestonmap">
+                <img src="gallery.images/prestonmap.png" alt="map" class="prestonmap">
                 <div class="contactinfo">
                 <h3>Contact Information:</h3>
                 <p>&#9742;: 888-888-8888</p>
