--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -35,8 +35,26 @@
                     <li><a href="#">Gallery</a></li>
                 </ul>
             </nav>
-        <main>
-            
+        <main class="main">
+            <h1>Gallery</h1>
+            <picture>
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload1.jpeg" alt="camera">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload2.jpeg" alt="mountains">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload3.jpg" alt="man on rock">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload4.jpeg" alt="sailboat">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload5.jpeg" alt="river and mountains">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload6.jpg" alt="paper rolls">
+            </picture>
         </main>
         <footer>
             <div class="contactmap">
