--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -28,7 +28,7 @@
                 <button onclick="toggleMenu()">&#9776; Menu</button>
                 <ul id="mainNav" class="hide">
                     <li><a href="#">Home</a></li>
-                    <li><a>href="#">Preston</a></li>
+                    <li><a href="#">Preston</a></li>
                     <li><a href="#">Soda Springs</a></li>
                     <li><a href="#">Fish Haven</a></li>
                     <li><a href="#">Storm Center</a></li>
