--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -34,7 +34,7 @@
             </span>
             <br>
             <span class="dateModified"> Last Updated:
-                <script src="file.js" type="text/javascript"></script>
+                <script src="js/file.js" type="text/javascript"></script>
             </span>
         </footer>
         <script>
