--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -21,9 +21,12 @@
                 <div>
                 <nav class="lessons">
                 <ul>
-                    <li><strong>Lesson 02: </strong> <a href="lesson2/design-principles.html">Assignment Link</a></li>
-                    <li><strong>Lesson 03: </strong> <a href="lesson3/index.html">Assignment Link</a></li>
-                    <li><strong>Lesson 04: </strong> <a href="#">Link</a> | <a href="#">Link</a></li>
+                    <li><strong>Lesson 02: </strong> <a href="https://sommerl.github.io/lesson2/design-principles.html">Assignment Link</a></li>
+                    <li><strong>Lesson 03: </strong> <a href="https://sommerl.github.io/lesson3/target-audience.html">Assignment Link</a></li>
+                    <li><strong>Lesson 04: </strong> <a href="https://sommerl.github.io/lesson4/preston-4.html">Assignment Link</a></li>
+                    <li><strong>Lesson 05: </strong> <a href="https://sommerl.github.io/lesson5/preston-5.html">Assignment Link</a></li>
+                    <li><strong>Lesson 06: </strong> <a href="https://sommerl.github.io/lesson6/preston-6.html">Assignment Link</a></li>
+                    <li><strong>Lesson 07: </strong> <a href="https://sommerl.github.io/lesson7/gallery-7.html#">Assignment Link</a></li>
                 </ul>
             </nav>
                 </div>
