--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -36,9 +36,9 @@
                 </ul>
             </nav>
         <main class="main">
-            <h1>Gallery</h1>
+            <h1>Weather Gallery</h1>
             <picture>
-                <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload1.jpeg" alt="camera">
+                <img src="https://via.placeholder.com/300x400" data-src="" alt="camera">
             </picture>
             <picture>
                 <img src="https://via.placeholder.com/300x400" data-src="lazyload.images/lazyload2.jpeg" alt="mountains">
