--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -75,6 +75,7 @@
                 <div id="updated">
                 </div>
         </footer>
+        <script src="gallery.js"></script>
         <script src="js/file.js"></script>
         <script src="js/getcurrentdate.js"></script>
     </body>
