--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -41,19 +41,19 @@
                 <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather1.jpg" alt="weatherone">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="lazyload.images/lazyload2.jpeg" alt="mountains">
+                <img src="https://via.placeholder.com/400x500" data-src="" alt="mountains">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/200x111" data-src="lazyload.images/lazyload3.jpg" alt="man on rock">
+                <img src="https://via.placeholder.com/200x111" data-src="" alt="man on rock">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/200x111" data-src="lazyload.images/lazyload4.jpeg" alt="sailboat">
+                <img src="https://via.placeholder.com/200x111" data-src="" alt="sailboat">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/200x111" data-src="lazyload.images/lazyload5.jpeg" alt="river and mountains">
+                <img src="https://via.placeholder.com/200x111" data-src="" alt="river and mountains">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/200x111" data-src="lazyload.images/lazyload6.jpg" alt="paper rolls">
+                <img src="https://via.placeholder.com/200x111" data-src="" alt="paper rolls">
             </picture>
         </main>
         <footer>
