--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -38,7 +38,7 @@
         <main class="main">
             <h1>Weather Gallery</h1>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather1" alt="weatherone">
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather1.jpg" alt="weatherone">
             </picture>
             <picture>
                 <img src="https://via.placeholder.com/400x500" data-src="" alt="mountains">
