--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -41,19 +41,28 @@
                 <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather1.jpg" alt="weatherone">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="" alt="mountains">
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather2.jpg" alt="weathertwo">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="" alt="man on rock">
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather3.jpg" alt="weatherthree">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="" alt="sailboat">
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather4.jpg" alt="weatherfour">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="" alt="river and mountains">
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather5.jpg" alt="weatherfive">
             </picture>
             <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="" alt="paper rolls">
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather6.jpg" alt="weathersix">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather7.jpg" alt="weatherseven">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather8.jpg" alt="weathereight">
+            </picture>
+            <picture>
+                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather9.jpg" alt="weathernine">
             </picture>
         </main>
         <footer>
