--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -36,34 +36,19 @@
                 </ul>
             </nav>
         <main class="main">
-            <h1>Weather Gallery</h1>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather1.jpg" alt="weatherone">
+            <h2 class="left-align">Weather Gallery</h2>
+
+            <div class="container">
+                <div class="box">
+            <picture class="box-shadow">
+               <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
+               <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
+                <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg" alt="weather1">
             </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather2.jpg" alt="weathertwo">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather3.jpg" alt="weatherthree">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather4.jpg" alt="weatherfour">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather5.jpg" alt="weatherfive">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather6.jpg" alt="weathersix">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather7.jpg" alt="weatherseven">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather8.jpg" alt="weathereight">
-            </picture>
-            <picture>
-                <img src="https://via.placeholder.com/400x500" data-src="gallery.images/weather9.jpg" alt="weathernine">
-            </picture>
+                </div>
+
+            
+        </div>
         </main>
         <footer>
             <div class="contactmap">
