--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -36,16 +36,16 @@
                 </ul>
             </nav>
         <main class="main">
-            <h2 class="left-align">Weather Gallery</h2>
+            <h2 class="gallerytitle">Weather Gallery</h2>
 
             <div class="container">
-                <div class="box">
-            <picture class="box-img">
+                <figure>
+            <picture class="imgloader">
                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg" alt="weather1">
             </picture>
-                </div>
+              </figure>
 
             
         </div>
