--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -37,18 +37,14 @@
             </nav>
         <main class="main">
             <h2 class="gallerytitle">Weather Gallery</h2>
-
-            <div class="container">
                 <figure>
             <picture class="imgloader">
                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg" alt="weather1">
             </picture>
+            <figcaption>Lightning</figcaption>
               </figure>
-
-            
-        </div>
         </main>
         <footer>
             <div class="contactmap">
