--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -41,7 +41,7 @@
             <picture class="imgloader">
                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
-                <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg" alt="weather1">
+                <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg" alt="weather1" style="width:auto;">
             </picture>
             <figcaption>Lightning</figcaption>
               </figure>
