--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -39,9 +39,9 @@
             <h2 class="gallerytitle">Weather Gallery</h2>
                 <figure>
             <picture class="imgloader">
-               <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg">
-               <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weather1L.jpg">
-                <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weather1.jpg" alt="weather1" style="width:auto;">
+               <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall1.jpg">
+               <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium1.jpg">
+                <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge1.jpg" alt="weather1" style="width:auto;">
             </picture>
             <figcaption>Lightning</figcaption>
               </figure>
