--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -45,6 +45,14 @@
             </picture>
             <figcaption>Lightning</figcaption>
               </figure>
+              <figure>
+                <picture class="imgloader">
+                   <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall2.jpg">
+                   <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium2.jpg">
+                    <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge2.jpg" alt="weather1" style="width:auto;">
+                </picture>
+                <figcaption>Lightning</figcaption>
+                  </figure>
         </main>
         <footer>
             <div class="contactmap">
