--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -49,10 +49,26 @@
                 <picture class="imgloader">
                    <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall2.jpg">
                    <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium2.jpg">
-                    <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge2.jpg" alt="weather1" style="width:auto;">
+                    <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge2.jpg" alt="weather2" style="width:auto;">
                 </picture>
                 <figcaption>Lightning</figcaption>
                   </figure>
+                  <figure>
+                    <picture class="imgloader">
+                       <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall3.jpg">
+                       <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium3.jpg">
+                        <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge3.jpg" alt="weather3" style="width:auto;">
+                    </picture>
+                    <figcaption>Lightning</figcaption>
+                      </figure>
+                      <figure>
+                        <picture class="imgloader">
+                           <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall4.jpg">
+                           <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium4.jpg">
+                            <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge4.jpg" alt="weather4" style="width:auto;">
+                        </picture>
+                        <figcaption>Lightning</figcaption>
+                          </figure>
         </main>
         <footer>
             <div class="contactmap">
