--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -35,7 +35,7 @@
                     <li class="active"><a href="#">Gallery</a></li>
                 </ul>
             </nav>
-        <main>
+        <main class="gallery">
             <h2 class="gallerytitle">Weather Gallery</h2>
                 <figure>
             <picture class="imgloader">
