--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -42,53 +42,53 @@
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium1.jpg">
                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge1.jpg" alt="weather1" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Snowy Lake</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall2.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium2.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge2.jpg" alt="weather2" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Sunny Green Landscape</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall3.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium3.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge3.jpg" alt="weather3" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Lightning Strike</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall4.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium4.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge4.jpg" alt="weather4" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Storm Cloud</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall5.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium5.jpg">
-                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge5.jpg" alt="weather4" style="width:auto;">
+                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge5.jpg" alt="weather5" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Dark Night Lightning Strike</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall6.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium6.jpg">
-                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge6.jpg" alt="weather4" style="width:auto;">
+                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge6.jpg" alt="weather6" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Beautiful Sunny Morning</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall7.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium7.jpg">
-                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge7.jpg" alt="weather4" style="width:auto;">
+                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge7.jpg" alt="weather7" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Sunny</figcaption>
             <figure class="imgloader">
                 <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall8.jpg">
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium8.jpg">
-                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge8.jpg" alt="weather4" style="width:auto;">
+                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge8.jpg" alt="weather8" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Bright Lightning Strike</figcaption>
             <figure class="imgloader">
-                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall4.jpg">
-                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium4.jpg">
-                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge4.jpg" alt="weather4" style="width:auto;">
+                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall9.jpg">
+                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium9.jpg">
+                 <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge9.jpg" alt="weather9" style="width:auto;">
             </figure>
             <figcaption>Lightning</figcaption>
             
