--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -90,7 +90,7 @@
                 <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium9.jpg">
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge9.jpg" alt="weather9" style="width:auto;">
             </figure>
-            <figcaption>Lightning</figcaption>
+            <figcaption>Snowy Mountains</figcaption>
             
 
 
