--- a/lesson7/gallery-7.html
+++ b/lesson7/gallery-7.html
@@ -37,6 +37,7 @@
             </nav>
         <main class="gallery">
             <h2 class="gallerytitle">Weather Gallery</h2>
+            <div class="container">
             <figure class="imgloader">
                <source media="(max-width: 640px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathersmall1.jpg">
                <source media="(max-width: 1104px)" srcset="gallery.images/placeholder.png" data-srcset="gallery.images/weathermedium1.jpg">
@@ -91,9 +92,7 @@
                  <img src="gallery.images/placeholder.png" data-srcset="gallery.images/weatherlarge9.jpg" alt="weather9" style="width:auto;">
             </figure>
             <figcaption>Snowy Mountains</figcaption>
-            
-
-
+        </div>
         </main>
         <footer>
                 &#169; Right On Weather | Attributions | Laura Sommer
