--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -41,7 +41,7 @@
                 <picture class="banner-img">
                     <source media="(max-width: 200px)" srcset="images/small.jpg">
                     <source media="(max-width: 600px)" srcset="images/medium.jpg">
-                        <img src="images/large.jpg" alt="herobannerimg">
+                        <img src="images/large.jpg" alt="herobannerimg" class="herobannerimg">
                 </picture>
             <section class="weathersummary">
                 <h3>Weather Summary</h3>
